# py-ucan

./: .gitignore  README.md  build.sh  command.example.md  config.toml.example  example.md  output.md  pyproject.toml
src/py_screw/: __main__.py  cli.py
