[project]
name = "py-ucan"
version = "0.1.0"
description = "常用命令包装器，简化使用，对AI Agent友好，目前支持调用yt-dlp进行视频信息获取、下载等相关操作。"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp",
    "click",
]

[project.scripts]
py-ucan = "py_screw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_screw"]
